# CaptchaBeam

./: .gitignore  ARCHITECTURE.md  README.md  README_zh-CN.md.md  pyproject.toml
docs/: benchmarks.md  experiments.md
examples/: custom_backend.py  custom_charset.py  quickstart.py
scripts/: benchmark.py  profile_decode.py
src/captchabeam/: __init__.py  cli.py  config.py  engine.py  types.py
src/captchabeam/backends/: __init__.py  _dynamic_model.py  base.py  batched.py  ddddocr_backend.py  fast.py
src/captchabeam/decode/: __init__.py  base.py  beam.py  greedy.py  logmath.py
src/captchabeam/eval/: __init__.py  ablation.py  dataset.py  harness.py  metrics.py
src/captchabeam/preprocess/: __init__.py  ops.py  pipeline.py  presets.py
src/captchabeam/select/: __init__.py  agreement.py  base.py  confidence.py
tests/: test_batched.py  test_beam.py  test_engine.py  test_fast.py  test_integration_ddddocr.py  test_metrics.py  test_pipeline.py  test_selector.py
