[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "captchabeam"
version = "0.1.0"
description = "Customizable restricted CTC beam-search decoding and OpenCV preprocessing variants for fixed-format captcha OCR."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "CaptchaBeam" }]
keywords = ["captcha", "ocr", "ctc", "beam-search", "opencv", "ddddocr"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
cv = ["opencv-python"]
ddddocr = ["ddddocr"]
eval = ["opencv-python", "ddddocr"]
all = ["opencv-python", "ddddocr"]
dev = ["opencv-python", "ddddocr", "pytest"]

[project.scripts]
captchabeam = "captchabeam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
